Fixed checkbox alignment

--- a/src/components/shared/MultiSelect/index.scss
+++ b/src/components/shared/MultiSelect/index.scss
@@ -25,3 +25,10 @@
     margin-top: 0;
   }
 }
+
+.easi-multiselect {
+  .usa-checkbox {
+    display: flex;
+    align-items: center;
+  }
+}
